--- a/backend/package.json
+++ b/backend/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "condocrawler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "start": "tsc && node build/index.js --scrape",
-    "replay": "tsc && node build/index.js --replay",
-    "api": "tsc && node build/index.js --api",
-    "geocode": "tsc && node build/index.js --geocode",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Patric Puola",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^2.3.0",
-    "@prisma/client": "^4.10.1",
-    "apicache": "^1.6.3",
-    "axios": "^1.3.2",
-    "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.12",
-    "cli-progress": "^3.11.2",
-    "express": "^4.18.2",
-    "opencage-api-client": "^1.0.1",
-    "request-promise": "^4.2.6",
-    "selenium-webdriver": "^4.8.0",
-    "sqlite3": "^5.1.4",
-    "yargs": "^17.6.2"
-  },
-  "devDependencies": {
-    "@types/apicache": "^1.6.1",
-    "@types/chalk": "^2.2.0",
-    "@types/cli-progress": "^3.11.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/mapbox__mapbox-gl-geocoder": "^4.7.3",
-    "@types/request-promise": "^4.1.48",
-    "@types/selenium-webdriver": "^4.1.10",
-    "@types/yargs": "^17.0.22",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "autoprefixer": "^10.4.13",
-    "chromedriver": "^109.0.0",
-    "eslint": "^8.33.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prisma": "^4.10.1",
-    "typescript": "^4.9.5"
-  }
+	"name": "condocrawler",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.ts",
+	"scripts": {
+		"start": "tsc && node build/index.js --scrape",
+		"replay": "tsc && node build/index.js --replay",
+		"api": "tsc && node build/index.js --api",
+		"geocode": "tsc && node build/index.js --geocode",
+		"district": "tsc && node build/index.js --district",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "Patric Puola",
+	"license": "ISC",
+	"type": "commonjs",
+	"dependencies": {
+		"@mapbox/mapbox-gl-geocoder": "^2.3.0",
+		"@prisma/client": "^4.10.1",
+		"apicache": "^1.6.3",
+		"axios": "^1.3.2",
+		"chalk": "^4.1.2",
+		"cheerio": "^1.0.0-rc.12",
+		"cli-progress": "^3.11.2",
+		"express": "^4.18.2",
+		"mysql2": "^3.1.2",
+		"opencage-api-client": "^1.0.1",
+		"request-promise": "^4.2.6",
+		"selenium-webdriver": "^4.8.0",
+		"yargs": "^17.6.2"
+	},
+	"devDependencies": {
+		"@types/apicache": "^1.6.1",
+		"@types/chalk": "^2.2.0",
+		"@types/cli-progress": "^3.11.0",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/mapbox__mapbox-gl-geocoder": "^4.7.3",
+		"@types/request-promise": "^4.1.48",
+		"@types/selenium-webdriver": "^4.1.10",
+		"@types/yargs": "^17.0.22",
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"@typescript-eslint/parser": "^5.50.0",
+		"autoprefixer": "^10.4.13",
+		"chromedriver": "^109.0.0",
+		"eslint": "^8.33.0",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.3",
+		"prisma": "^4.10.1",
+		"typescript": "^4.9.5"
+	}
 }
