--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "mapbox-gl": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.21",
     "react-redux": "^8.0.5",
     "supercluster": "^7.1.5"
   },
